codegen/tests/fail/delegate/external_trait_without_argument.stderr
error[E0576]: cannot find associated type `Wrapper` in trait `AsRefDef`
 --> tests/fail/delegate/external_trait_without_argument.rs:3:1
  |
3 | #[delegate]
  | ^^^^^^^^^^^ not found in `AsRefDef`
...
8 | #[delegate(derive(AsRef<str> as AsRefDef))]
  | ------------------------------------------- in this procedural macro expansion
  |
  = note: this error originates in the macro `::delegation::private::impl_for` which comes from the expansion of the attribute macro `delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0220]: associated type `__delegate_AsRefDef__Bind0` not found for `Self`
 --> tests/fail/delegate/external_trait_without_argument.rs:4:11
  |
4 | pub trait AsRefDef<T: ?Sized> {
  |           ^^^^^^^^ there is an associated type `__delegate_AsRefDef__Bind0` in the trait `__delegate_AsRefDef__Scope`
...
8 | #[delegate(derive(AsRef<str> as AsRefDef))]
  | ------------------------------------------- in this procedural macro expansion
  |
  = note: this error originates in the macro `AsRefDef` which comes from the expansion of the attribute macro `delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
